...
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
      const val DELETE_BUTTON = "deleteButton"
      const val SAVE_BUTTON = "saveButton"
      const val RESOLVE_BUTTON = "resolveButton"
    }

    /** Constants for tagging UI components in the AlertListsScreen. */
    object AlertListsScreen {
      const val SCREEN = "alertListScreen"
      const val TAB_ROW = "tabRow"
      const val MY_ALERTS_TAB = "myAlertsTab"
      const val PALS_ALERTS_TAB = "palsAlertsTab"

      const val ALERT_PROFILE_PICTURE = "alertProfilePicture"
      const val ALERT_TIME_AND_LOCATION = "alertTimeAndLocation"
      const val ALERT_PRODUCT_AND_URGENCY = "alertProductAndUrgency"
      const val ALERT_PRODUCT_TYPE = "alertProductType"
      const val ALERT_URGENCY = "alertUrgency"
      const val NO_ALERTS_CARD = "noAlertsCard"
      const val NO_ALERTS_ICON = "noAlertsIcon"
      const val NO_ALERTS_TEXT = "noAlertsText"

      const val ACCEPTED_ALERTS_TEXT = "acceptedAlertsText"
      const val ACCEPTED_ALERTS_DIVIDER = "acceptedAlertsDivider"

      const val FILTER_FAB = "filterFab"
      const val FILTER_FAB_BUBBLE = "filterFabBubble"
...
    /** Constants for tagging UI components in the authentication screens. */
    object AuthenticationScreens {
      /** Constants for tagging UI components in the SignInScreen. */
      object SignInScreen {
        const val SCREEN = "signInScreen"
        const val INSTRUCTION_TEXT = "instructionText"
        const val SIGN_IN_BUTTON = "signInButton"
        const val NOT_REGISTERED_NAV_LINK = "notRegisteredButton"
      }

      /** Constants for tagging UI components in the SignUpScreen. */
      object SignUpScreen {
        const val SCREEN = "signUpScreen"
...

      // shared authentication components
      const val PASSWORD_ERROR_TEXT = "passwordErrorText"
      const val EMAIL_ERROR_TEXT = "emailErrorText"
      const val BACKGROUND = "background"
      const val WELCOME_TEXT = "welcomeText"
      const val EMAIL_FIELD = "emailField"
      const val PASSWORD_FIELD = "passwordField"
      const val PASSWORD_VISIBILITY_BUTTON = "passwordVisibilityButton"
    }

    /** Constants for tagging UI components in the MapScreen. */
    object MapScreen {
      const val SCREEN = "mapScreen"
...
      const val CONNECTIVITY_BANNER = "connectivityBanner"
      const val CONNECTIVITY_BANNER_TEXT = "connectivityBannerText"
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
    object ProfileScreens {
      /** Constants for tagging UI components in the CreateProfileScreen. */
      object CreateProfileScreen {
...
        const val EDIT_PROFILE_PICTURE = "editProfilePicture"
      }

      /** Constants for tagging UI components in the ProfileScreen. */
      object ProfileScreen {
        const val SCREEN = "profileScreen"
        const val NAME_FIELD = "nameField"
        const val DESCRIPTION_FIELD = "descriptionField"
        const val CONTRIBUTION_FIELD = "contributionField"
        const val REVIEWS_SECTION = "reviewsSection"
        const val REVIEW_ONE = "reviewOne"
        const val REVIEW_TWO = "reviewTwo"
        const val NO_REVIEWS_ICON = "noReviewsIcon"
        const val NO_REVIEWS_TEXT = "noReviewsText"
...
      const val THEME_DROP_DOWN_MENU = "themeDropdownMenu"
      const val PASSWORD_TEXT = "passwordText"
      const val PASSWORD_ICON = "passwordIcon"
      const val SIGN_OUT_TEXT = "signOutText"
      const val SIGN_OUT_ICON = "signOutIcon"
      const val DELETE_ACCOUNT_TEXT = "deleteAccountText"
      const val DELETE_ACCOUNT_ICON = "deleteAccountIcon"
      const val DELETE_ACCOUNT_CARD = "deleteCard"
      const val CARD_EMOJI_ICON = "deleteEmojiIcon"
      const val CARD_TEXT = "deleteText"
      const val DELETE_BUTTON = "deleteButton"
      const val NOT_DELETE_BUTTON = "notDeleteButton"
    }
...
    /** Constants for tagging UI components in the TimerScreen. */
    object TimerScreen {
      const val SCREEN = "timerScreen"
      const val DISPLAYED_TEXT = "displayedText"
      const val CIRCULAR_PROGRESS_INDICATOR = "circularProgressIndicator"
      const val HOURGLASS = "Hourglass"
      const val START_BUTTON = "Start button"
      const val RESET_BUTTON = "Reset button"
      const val STOP_BUTTON = "Stop button"
      const val USEFUL_TIP = "usefulTip"
      const val USEFUL_TIP_TEXT = "usefulTipText"
    }

    object ChannelsScreen {
      const val SCREEN = "channelsScreen"
...
