...
import androidx.compose.ui.graphics.vector.ImageVector
import androidx.navigation.NavGraph.Companion.findStartDestination
import androidx.navigation.NavHostController

object Route {
  const val AUTH = "Auth"
  const val ALERT = "Alert"
  const val ALERT_LIST = "Alert List"
  const val MAP = "Map"
  const val TIMER = "Timer"
  const val PROFILE = "Profile"
}

...
